--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 </head>
 <body class="about-page">
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
@@ -231,6 +231,6 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
