--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <link href="assets/vendor/isotope-layout/isotope.pkgd.min.js">
-  <link href="assets/js/main.js">
+  <link href="main.js">
   <link href="assets/css/all.min.css" rel="stylesheet">
 </head>
 <body class="index-page">
@@ -341,6 +341,6 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
