--- a/play-page.html
+++ b/play-page.html
@@ -6,8 +6,8 @@
   <title>Index - MOVIES</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link href="assets/img/logo.svg" rel="icon">
-  <link href="assets/img/logo.svg" rel="apple-touch-icon">
+  <link href="logo.svg." rel="icon">
+  <link href="logo.svg" rel="apple-touch-icon">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
-  <link href="assets/css/all.min.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 </head>
 <body class="index-page">
     <header id="header" class="header d-flex align-items-center light-background sticky-top">
@@ -312,7 +312,7 @@
           <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
           <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
           <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-          <script src="assets/js/main.js"></script>
+          <script src="main.js"></script>
           <!---link swiper files-->
 <script src="assets/js/java.js"></script>
 <!--- Swiper --->
